Adding changes on the Formatting

--- a/Lending_Club_EDA_Analysis.ipynb
+++ b/Lending_Club_EDA_Analysis.ipynb
@@ -3738,7 +3738,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Purpose #### \n"
+    "#### Purpose #### \n",
+    "\n",
+    "Here we will look at the data as a whole and try to determine which variables need to be analysed further, using plots\n"
    ]
   },
   {
@@ -3919,16 +3921,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.1 Univariate Analysis ###"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lets look at the overall Features to see which variables could be helpful for deeper analysis\n",
+    "**Plotting all Numeric Features** :\n",
     "\n",
-    "***Plotting all Numeric Features*** :"
+    "Lets look at the overall Features to see which variables could be helpful for deeper analysis"
    ]
   },
   {
@@ -3967,10 +3962,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Variable : **pub_rec_bankruptcies** \n",
-    "\n",
-    "\n",
-    "Does previous public record of bankruptcies of an individual impact the ability to close a loan?"
+    "Lets draw a heatmap of all the variables as well and see if there are any prelimnary insights"
    ]
   },
   {
@@ -4019,6 +4011,23 @@
     "    - ** out_prncp** and **out_prncp_investor** show high correlation and one of them can be discarded\n",
     "    - **pub_rec_bankruptcy** and **pub_rec** show 100% correlation.\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1 Univariate Analysis ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Variable : **pub_rec_bankruptcies** \n",
+    "\n",
+    "\n",
+    "Does previous public record of bankruptcies of an individual impact the ability to close a loan?"
    ]
   },
   {
