Added Univariate and Multivariate Analysis for all Features

--- a/EDA_Lending_club_sree.ipynb
+++ b/EDA_Lending_club_sree.ipynb
@@ -2555,29 +2555,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 746,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "usarmy                          256\n",
-       "bankofamerica                   133\n",
-       "walmart                         110\n",
-       "att                              93\n",
-       "jpmorganchase                    91\n",
-       "                               ... \n",
-       "socalcustoninc                    1\n",
-       "missouribaptistmedicalcenter      1\n",
-       "truckenterprisesinc               1\n",
-       "takcommunicationsinc              1\n",
-       "wmsgaming                         1\n",
-       "Name: emp_title, Length: 25124, dtype: int64"
-      ]
-     },
-     "execution_count": 746,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'loan_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-459a24355962>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mloan_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0memp_title\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdropna\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'loan_df' is not defined"
+     ]
     }
    ],
    "source": [
