--- a/Lending_Club_EDA_Analysis.ipynb
+++ b/Lending_Club_EDA_Analysis.ipynb
@@ -29857,7 +29857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29867,8 +29867,9 @@
     "#This function takes a dataframe and either plots two categorical bars side by side or plots them in the same using hue\n",
     "#If hue is provided then the plot is done in the same function\n",
     "#If hue is not provided then the loan_status variable is used to split the same into two side by side bars and plotting is done\n",
-    "def plot_dualbar_or_huebar(df, categorize_by, hue=None, sortbyindex=False):\n",
+    "def plot_dualbar_or_huebar(df, categorize_by, hue=None, sortbyindex=False, title=None):\n",
     "    plt.style.use('fivethirtyeight')\n",
+    "    plt.title=title\n",
     "    if hue:\n",
     "        plt.figure(figsize=[15,10])\n",
     "        sns.barplot(data = loan_analysis_df, y=categorize_by, x=\"loan_status_cat\", hue=\"loan_status\" ,estimator=np.sum, orient=\"h\")\n",
@@ -29876,7 +29877,7 @@
     "    else :\n",
     "        plt.figure(figsize=[15,10])\n",
     "        #Plot for the universe\n",
-    "\n",
+    "        \n",
     "        plt.subplot(1, 2, 1)\n",
     "        values = (loan_analysis_df[categorize_by].value_counts(normalize=True)*100)\n",
     "        if sortbyindex:\n",
@@ -30496,7 +30497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -30725,7 +30726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -30740,8 +30741,7 @@
     }
    ],
    "source": [
-    "plot_dualbar_or_huebar(loan_analysis_df, categorize_by = 'term')\n",
-    "plt.title(\"\")"
+    "plot_dualbar_or_huebar(loan_analysis_df, categorize_by = 'term', title=\"Segmented Univariate Analysis on Term\")"
    ]
   },
   {
@@ -31059,7 +31059,7 @@
     "**Inference**\n",
     "\n",
     "- LC has been giving out maximum loans in December\n",
-    "- LC is having more than 100% incread on year on year increase in the Loans issues. \n",
+    "- LC is having more than 100% increase on year on year increase in the Loans issues. \n",
     "- There is a high distribution of Loans in December and every year, but there is no break in the process, it seems the process is working well"
    ]
   },
